--- a/announcement.html
+++ b/announcement.html
@@ -10,7 +10,7 @@
 <font size="8"><b><a href="http://www.meteorfalls.icyboards.net/" style="text-decoration: none; color: white"><u>Meteor Falls</u></a></b></font>
 <br/>
 <br/>
-<font size="4" color="black"><b>WELCOME TO OUR GRAND OPENING!</b></font>
+<font size="4" color="black"><b>WELCOME TO METEOR FALLS!</b></font>
 </font>
 
 </td>
