--- a/announcement.html
+++ b/announcement.html
@@ -21,7 +21,7 @@
     <font face="Gisha"  size="4"><b>
       <a href="http://www.meteorfalls.icyboards.net/" style="text-decoration: none; color: white"><u>Forums</u></a> <img src="themes/classic/client/aavailable.png"> <br/>
       <a href="http://meteorfalls.icyboards.net/forumdisplay.php?fid=14" style="text-decoration: none; color: white"><u>League</u></a> <img src="themes/classic/client/aavailable.png"> <br/>
-      <a href="http://meteorfalls.icyboards.net/showthread.php?tid=77" style="text-decoration: none; color: white"><u>Item-based tier discussion</u></a> <img src="themes/classic/client/aavailable.png"> <br/>
+      <a href="http://meteorfalls.icyboards.net/showthread.php?tid=77" style="text-decoration: none; color: white"><u>Tier Discussion</u></a> <img src="themes/classic/client/aavailable.png"> <br/>
       <a href="https://github.com/meteor-falls/Scripts" style="text-decoration: none; color: white"><u>Scripts</u></a> <img src="themes/classic/client/aavailable.png"> <br/>
     </b></font>
     
