--- a/announcement.html
+++ b/announcement.html
@@ -8,7 +8,7 @@
         <td align="center">
             <font face="Gisha"> <font size="8"><b><a href="http://meteorfalls.us/forums/" style="text-decoration: none; color: white"><u>Meteor Falls</u></a></b></font>
             <br/>
-            <br/> <font size="4" color="white"><b>Want to get started?</font><font color=white><br><br><b>1) Make a 6th Gen team and make sure it's in the correct tier <br>2) Search/Ask for a battle <br>3) Have fun and tell your friends about us! </b><br></td>
+            <br/> <font size="4" color="black"><b>THE <font color=white>PREMIER</font> <font size="4" color="black"><b>BATTLING DESTINATION</b></font> </font></td>
 <td align="right"> <font face="Gisha" size="4"><b> <a href="http://meteorfalls.us/" style="text-decoration: none; color: white"><u>Forums</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=118" style="text-decoration: none; color: white"><u>League</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=37" style="text-decoration: none; color: white"><u>Script Suggestions</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="text-decoration: none; color: white"><u>Quote Book</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="text-decoration: none; color: red"><u>Join the [VP] clan!</u></a> <img src="themes/classic/client/aavailable.png"> <br/></b></font>
         </td>
     </tr>
