--- a/announcement.html
+++ b/announcement.html
@@ -3,12 +3,14 @@
         <td align="left">
             <br/>
             <br/>&nbsp;&nbsp;&nbsp;
-            <img src="pokemon:6&gen=4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <img src="pokemon:6&gen=4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </td>
         <td align="center">
             <font face="Gisha"> <font size="8"><b><a href="http://meteorfalls.us/forums/" style="text-decoration: none; color: white"><u>Meteor Falls</u></a></b></font>
             <br/>
-            <br/> <font size="4" color="black"><b>THE <font color=white>PREMIER</font> <font size="4" color="black"><b>BATTLING DESTINATION</b></font> </font></td>
+            <br/> <font size="4" color="black"><b>THE <font color=white>PREMIER</font> <font size="4" color="black"><b>BATTLING DESTINATION</b></font> </font>
+            <br/> <img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:32&gen=2'><img src='pokemon:79&gen=2'>
+           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'><img src='pokemon:11&gen=2'><img src='pokemon:4&gen=2'><img src='pokemon:133&gen=2'></td>
 <td align="right"> <font face="Gisha" size="4"><b> <a href="http://meteorfalls.us/" style="text-decoration: none; color: white"><u>Forums</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=118" style="text-decoration: none; color: white"><u>League</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=37" style="text-decoration: none; color: white"><u>Script Suggestions</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="text-decoration: none; color: white"><u>Quote Book</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="text-decoration: none; color: red"><u>Join the [VP] clan!</u></a> <img src="themes/classic/client/aavailable.png"> <br/></b></font>
         </td>
     </tr>
