--- a/variations/announcement_classic.html
+++ b/variations/announcement_classic.html
@@ -1,4 +1,4 @@
-<table width='100%' style="background-color: qlineargradient(spread:pad, x1:0.941573, y1:0.046, x2:0, y2:1, stop:0.0376766 rgba(76, 171, 215, 255), stop:1 rgba(0, 0, 0, 255))">
+<table width='100%' style="background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:1.303, fx:0.591, fy:0.522727, stop:0 rgba(85, 255, 255, 255), stop:0.568182 rgba(0, 0, 0, 255), stop:0.840909 rgba(255, 0, 0, 255));">
     <tr>
         <td align="left">
             <br/><br/>
@@ -8,7 +8,7 @@
         <td align="center">
             <font face="Gisha"> <font size="8"><b><a href="http://meteorfalls.us/forums/" style="text-decoration: none; color: white"><u>Meteor Falls</u></a></b></font>
             <br/>
-            <br/> <span title='In reality, everyone is idle all the time.'><font size="4" color="#6f7d99"><b>THE <font color=white>PREMIER</font> <font size="4" color="#6f7d99"><b>BATTLING DESTINATION</b></font> </font></span>
+            <br/> <span title='In reality, everyone is idle all the time.'><font size="4" color="black"><b>THE <font color=white>PREMIER</font> <font size="4" color="black"><b>BATTLING DESTINATION</b></font> </font></span>
             <br/> <img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:32&gen=2'><img src='pokemon:79&gen=2'><img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'><img src='pokemon:11&gen=2'></td>
 <td align="right"> <font face="Gisha" size="4"><b> <a href="http://meteorfalls.us/" style="text-decoration: none; color: white"><u>Forums</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=118" style="text-decoration: none; color: white"><u>League</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=37" style="text-decoration: none; color: white"><u>Script Suggestions</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="text-decoration: none; color: white"><u>Quote Book</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="text-decoration: none; color: red"><u>Join the [VP] clan!</u></a> <img src="themes/classic/client/aavailable.png"> <br/></b></font>
         </td>
