--- a/announcement.html
+++ b/announcement.html
@@ -1,3 +1,4 @@
+<body>
 <table width='100%' style="background-color: qlineargradient(spread:pad, x1:0.941573, y1:0.046, x2:0, y2:1, stop:0.0376766 rgba(76, 171, 215, 255), stop:1 rgba(0, 0, 0, 255))">
     <tr>
         <td align="left">
@@ -12,3 +13,4 @@
         </td>
     </tr>
 </table>
+</body>
