--- a/variations/announcement_dusk.html
+++ b/variations/announcement_dusk.html
@@ -1,3 +1,4 @@
+<body>
 <table width='100%' style="background-color: qlineargradient(spread:pad, x1:1, y1:0, x2:0, y2:1, stop:0 rgba(51, 30, 84, 255), stop:0.466368 rgba(68, 47, 101, 255), stop:1 rgba(0, 0, 0, 255))">
     <tr>
         <td align="left">
@@ -12,3 +13,4 @@
         </td>
     </tr>
 </table>
+</body>
