--- a/variations/announcement_classic.html
+++ b/variations/announcement_classic.html
@@ -1,8 +1,9 @@
-<body>
-<table width='100%' style="background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:1.303, fx:0.591, fy:0.522727, stop:0 rgba(85, 255, 255, 255), stop:0.568182 rgba(0, 0, 0, 255), stop:0.840909 rgba(255, 0, 0, 255));">
+<body style="background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:1.303, fx:0.591, fy:0.522727, stop:0 rgba(85, 255, 255, 255), stop:0.568182 rgba(0, 0, 0, 255), stop:0.840909 rgba(255, 0, 0, 255));">
+<table width='100%'>
     <tr>
         <td align="left">
-            <table style='margin-left: 28; margin-top: 40'><tr><td><img src="pokemon:138&gen=2" title="Ave Caesar!"></td></tr></table>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <table style='margin-left: 28; margin-top: 40'><tr><td><img src="pokemon:138&gen=2" title="Ave Caesar!"></td></tr></table>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </td>
         <td align="center">
             <font face="Gisha"> <font size="8"><b><a href="http://meteorfalls.us/forums/" style="text-decoration: none; color: white"><u>Meteor Falls</u></a></b></font>
