--- a/variations/announcement_summer.html
+++ b/variations/announcement_summer.html
@@ -1,4 +1,4 @@
-<body style="background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:1.303, fx:0.591, fy:0.522727, stop:0 rgba(85, 255, 255, 255), stop:0.568182 rgba(0, 0, 0, 255), stop:0.840909 rgba(255, 0, 0, 255))">
+<body style="background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(217, 88, 76, 255), stop:1 rgba(255, 103, 38, 255))">
 <table width=100%>
     <tr>
         <td align=left>
