--- a/variations/announcement_dusk.html
+++ b/variations/announcement_dusk.html
@@ -1,16 +1,26 @@
 <body style="background-color: qlineargradient(spread:pad, x1:1, y1:0, x2:0, y2:1, stop:0 rgba(51, 30, 84, 255), stop:0.466368 rgba(68, 47, 101, 255), stop:1 rgba(0, 0, 0, 255))">
-<table width='100%'>
+<table width=100%>
     <tr>
-        <td align="left">
-            <table style='margin-left: 28; margin-top: 40'><tr><td><img src="pokemon:138&gen=2" title="Ave Caesar!"></td></tr></table>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <td align=left>
+            <table style='margin-left:28;margin-top:40'><tr><td><img src="pokemon:138&gen=2"></td></tr></table>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </td>
-        <td align="center">
-            <font face="Gisha"> <font size="8"><b><a href="http://meteorfalls.us/forums/" style="text-decoration: none; color: white"><u>Meteor Falls</u></a></b></font>
+        <td align=center>
+            <font face=Gisha> <font size=8><b><a href="http://meteorfalls.us/forums/" style="color: white">Meteor Falls</a></b></font>
             <br/>
-            <br/> <span title='In reality, everyone is idle all the time.'><font size="4" color="#6f7d99"><b>THE <font color=white>PREMIER</font> <font size="4" color="#6f7d99"><b>BATTLING DESTINATION</b></font> </font></span>
-            <br/> <img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:32&gen=2'><img src='pokemon:79&gen=2'><img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'><img src='pokemon:11&gen=2'></td>
-<td align="right"> <font face="Gisha" size="4"><b> <a href="http://meteorfalls.us/" style="text-decoration: none; color: white"><u>Forums</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=118" style="text-decoration: none; color: white"><u>League</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=37" style="text-decoration: none; color: white"><u>Script Suggestions</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="text-decoration: none; color: white"><u>Quote Book</u></a> <img src="themes/classic/client/aavailable.png"> <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="text-decoration: none; color: red"><u>Join the [VP] clan!</u></a> <img src="themes/classic/client/aavailable.png"> <br/></b></font>
+            <br/> <font size=4 color=white><b>THE <font color=red>PREMIER</font> <font size=4 color=white></font><b>BATTLING DESTINATION</b></font> </font>
+            <br/> &nbsp;&nbsp;&nbsp;&nbsp;<img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:32&gen=2'><img src='pokemon:79&gen=2'><img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'><img src='pokemon:11&gen=2'>
+        </td>
+        <td align="right">
+            <font face=Gisha size=4><b>
+
+            <a href="http://meteorfalls.us/" style="color: white">Forums</a> <img src="themes/classic/client/aavailable.png">
+            <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=118" style="color: white">League</a> <img src="themes/classic/client/aavailable.png">
+            <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=37" style="color: white">Script Suggestions</a> <img src="themes/classic/client/aavailable.png">
+            <br/> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color: white">Quote Book</a> <img src="themes/classic/client/aavailable.png">
+            <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color: white">Join the [VP] clan!</a> <img src="themes/classic/client/aavailable.png">
+            <br/>
+            </b></font>
         </td>
     </tr>
 </table>
