--- a/announcement.html
+++ b/announcement.html
@@ -9,7 +9,7 @@
             <font face=Gisha> <font size=8><b><a href="http://meteorfalls.us/forums/" style="color: white">Meteor Falls</a></b></font>
             <br/>
             <br/> <font size=4 color=white><b>THE <font color=red>PREMIER</font> <font size=4 color=white></font><b>BATTLING DESTINATION</b></font> </font>
-            <br/> &nbsp;&nbsp;&nbsp;&nbsp;<img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:32&gen=2'><img src='pokemon:79&gen=2'><img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'><img src='pokemon:11&gen=2'>
+            <br/> <img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:32&gen=2'><img src='pokemon:79&gen=2'><img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'>
         </td>
         <td align="right">
             <font face=Gisha size=4><b>
