Announcement name tags

--- a/variants/classic.html
+++ b/variants/classic.html
@@ -1,3 +1,4 @@
+<!name classic>
 <body style="background-color: qradialgradient(spread:pad, cx:0.5, cy:0.5, radius:1.303, fx:0.591, fy:0.522727, stop:0 rgba(85, 255, 255, 255), stop:0.568182 rgba(0, 0, 0, 255), stop:0.840909 rgba(255, 0, 0, 255))">
 <table width=100%>
     <tr>
