--- a/variants/grass.html
+++ b/variants/grass.html
@@ -1,3 +1,4 @@
+<!name grass>
 <body style="background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.278571 rgba(170, 170, 127, 255), stop:0.628571 rgba(0, 255, 129, 255))">
 <table width=100%>
     <tr>
