Wrap in html tags

--- a/variants/dusk.html
+++ b/variants/dusk.html
@@ -1,3 +1,4 @@
+<html>
 <!name dusk>
 <body style="background-color: qlineargradient(spread:pad, x1:1, y1:0, x2:0, y2:1, stop:0 rgba(51, 30, 84, 255), stop:0.466368 rgba(68, 47, 101, 255), stop:1 rgba(0, 0, 0, 255))">
 <table width=100%>
@@ -26,3 +27,4 @@
     </tr>
 </table>
 </body>
+</html>
