--- a/variants/fluffy.html
+++ b/variants/fluffy.html
@@ -1,3 +1,4 @@
+<html>
 <!name fluffy>
 <body style="background-color: qradialgradient(cx:1,cy:0,radius:1.2, fx:0.5, fy:0.5,stop:0.4 #FFEE62,stop:0.5 #73B4D5,stop:0.64 #73B4D5,stop:0.65#73B4D5,stop:1#FFEE62)">
 <table width=100%>
@@ -26,3 +27,4 @@
     </tr>
 </table>
 </body>
+</html>
