--- a/variants/summer.html
+++ b/variants/summer.html
@@ -1,3 +1,4 @@
+<html>
 <!name summer>
 <body style="background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(217, 88, 76, 255), stop:1 rgba(255, 103, 38, 255))">
 <table width=100%>
@@ -26,3 +27,4 @@
     </tr>
 </table>
 </body>
+</html>
