Announcement generation script
From now on, edit announcement.template.html and execute `node
generate-announcements`

--- a/variants/summer.html
+++ b/variants/summer.html
@@ -1,28 +1,27 @@
 <html>
 <!name summer>
-<body style="background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(217, 88, 76, 255), stop:1 rgba(255, 103, 38, 255))">
+<body style="background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(217, 88, 76, 255), stop:1 rgba(255, 103, 38, 255))">
 <table width=100%>
     <tr>
         <td align=left>
-            <table style='margin-left:28;margin-top:40'><tr><td><img src="pokemon:138&gen=2"></td></tr></table>
+            <table style='margin-left:28;margin-top:40'><tr><td><img src="pokemon:160&gen=2"></td></tr></table>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </td>
         <td align=center>
-            <font face=Gisha> <font size=8><b><a href="http://meteorfalls.us/forums/" style="color: white">Meteor Falls</a></b></font>
-            <br/>
-            <br/> <font size=4 color=white><b>THE <font color=red>PREMIER</font> <font size=4 color=white></font><b>BATTLING DESTINATION</b></font> </font>
-            <br/> <img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:32&gen=2'><img src='pokemon:79&gen=2'><img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'>
+            <font face=Gisha>
+            <font size=8><b><a href="http://meteorfalls.us/forums/" style="color:white">Meteor Falls</a></b></font>
+            <br>
+            <br> <font size=4 color=white><b>THE <font color=red>PREMIER</font> <font size=4 color=white></font><b>BATTLING DESTINATION</b></font> </font>
+            <br> <img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:32&gen=2'><img src='pokemon:79&gen=2'><img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'>
         </td>
         <td align="right">
             <font face=Gisha size=4><b>
-
-            <a href="http://meteorfalls.us/" style="color: white">Forums</a> <img src="themes/classic/client/aavailable.png">
-            <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=118" style="color: white">League</a> <img src="themes/classic/client/aavailable.png">
-            <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=37" style="color: white">Script Suggestions</a> <img src="themes/classic/client/aavailable.png">
-            <br/> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color: white">Quote Book</a> <img src="themes/classic/client/aavailable.png">
-            <br/> <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color: white">Join the [VP] clan!</a> <img src="themes/classic/client/aavailable.png">
-            <br/>
-            </b></font>
+            <a href="http://meteorfalls.us/" style="color:white">Forums</a> <img src="themes/classic/client/aavailable.png">
+            <br> <a href="http://meteorfalls.us/forums/showthread.php?tid=118" style="color:white">League</a> <img src="themes/classic/client/aavailable.png">
+            <br> <a href="http://meteorfalls.us/forums/showthread.php?tid=37" style="color:white">Script Suggestions</a> <img src="themes/classic/client/aavailable.png">
+            <br> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:white">Quote Book</a> <img src="themes/classic/client/aavailable.png">
+            <br> <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:white">Join the [VP] clan!</a> <img src="themes/classic/client/aavailable.png">
+            <br></b></font>
         </td>
     </tr>
 </table>
