--- a/variants/lawn.html
+++ b/variants/lawn.html
@@ -1,6 +1,6 @@
 <html>
-<!name summer>
-<body style="background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(217, 88, 76, 255), stop:1 rgba(255, 103, 38, 255))">
+<!name lawn>
+<body style="background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.278571 rgba(170, 170, 127, 255), stop:0.628571 rgba(0, 255, 129, 255))">
 <table width=100%>
     <tr>
         <td align=left>
