--- a/variants/moonshine.html
+++ b/variants/moonshine.html
@@ -1,6 +1,6 @@
 <html>
-<!name grass>
-<body style="background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0.278571 rgba(170, 170, 127, 255), stop:0.628571 rgba(0, 255, 129, 255))">
+<!name moonshine>
+<body style="background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:0.5, stop:0 rgba(224, 216, 159, 0.6), stop:0.5 rgba(24, 26, 71, 0.99))">
 <table width=100%>
     <tr>
         <td align=left>
@@ -11,7 +11,7 @@
             <font face=Gisha>
             <font size=8><b><a href="http://meteorfalls.us/forums/" style="color:white">Meteor Falls</a></b></font>
             <br>
-            <br> <font size=4 color=white><b>THE <font color=red>PREMIER</font> <font size=4 color=white></font><b>BATTLING DESTINATION</b></font> </font>
+            <br> <font size=4 color=white><b>THE <font color=#E0D89F>PREMIER</font> <font size=4 color=white></font><b>BATTLING DESTINATION</b></font> </font>
             <br> <img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:32&gen=2'><img src='pokemon:79&gen=2'><img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'>
         </td>
         <td align="right">
