--- a/announcement.template.html
+++ b/announcement.template.html
@@ -18,7 +18,7 @@
             <font face=Gisha size=4><b>
             <a href="http://meteorfalls.us/" style="color:$textcolor$">Forums</a> <img src="themes/classic/client/aavailable.png">
             <br> <a href="http://meteorfalls.us/forums/showthread.php?tid=118" style="color:$textcolor$">League</a> <img src="themes/classic/client/aavailable.png">
-            <br> <a href="http://meteorfalls.us/forums/showthread.php?tid=37" style="color:$textcolor$">Script Suggestions</a> <img src="themes/classic/client/aavailable.png">
+            <br> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=7" style="color:$textcolor$">Feedback</a> <img src="themes/classic/client/aavailable.png">
             <br> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:$textcolor$">Quote Book</a> <img src="themes/classic/client/aavailable.png">
             <br> <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:$textcolor$">Join the [VP] clan!</a> <img src="themes/classic/client/aavailable.png">
             <br></b></font>
