--- a/variants/fluffy.html
+++ b/variants/fluffy.html
@@ -18,7 +18,7 @@
             <font face=Gisha size=4><b>
             <a href="http://meteorfalls.us/" style="color:gray">Forums</a> <img src="themes/classic/client/aavailable.png">
             <br> <a href="http://meteorfalls.us/forums/showthread.php?tid=118" style="color:gray">League</a> <img src="themes/classic/client/aavailable.png">
-            <br> <a href="http://meteorfalls.us/forums/showthread.php?tid=37" style="color:gray">Script Suggestions</a> <img src="themes/classic/client/aavailable.png">
+            <br> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=7" style="color:gray">Feedback</a> <img src="themes/classic/client/aavailable.png">
             <br> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:gray">Quote Book</a> <img src="themes/classic/client/aavailable.png">
             <br> <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:gray">Join the [VP] clan!</a> <img src="themes/classic/client/aavailable.png">
             <br></b></font>
