Remove drought, fluffy, lawn; Add ash

--- a/variants/ash.html
+++ b/variants/ash.html
@@ -1,6 +1,6 @@
 <html>
-<!name drought>
-<body style="background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(217, 88, 76, 255), stop:1 rgba(255, 103, 38, 255))">
+<!name ash>
+<body style="background-color:qlineargradient(x1: 1, y1: 0, x2: 1, y2: 1, stop: 0 #9a9a9a, stop: 0.25 #575757, stop: 0.5 #3a3a3a, stop: 1.0 #161616);">
 <table width=100%>
     <tr>
         <td align=left>
