--- a/announcement.template.html
+++ b/announcement.template.html
@@ -4,23 +4,23 @@
 <table width=100%>
     <tr>
         <td align=left>
-            <table style='margin-left:28;margin-top:40'><tr><td><img src="pokemon:164&gen=2"></td></tr></table>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <table style="margin-left:28;margin-top:40"><tr><td><img src="pokemon:164&gen=2"></td></tr></table>
+            <table style='margin: 0 128;'><tr><td></td></tr></table>
         </td>
         <td align=center>
             <font face=Gisha>
-            <font size=8><b><a href="http://meteorfalls.us/forums/" style="color:$textcolor$">Meteor Falls</a></b></font>
-            <br>
-            <br> <font size=4 color=$textcolor$><b>THE <font color=$mottocolor$>PREMIER</font> <font size=4 color=$textcolor$></font><b>BATTLING DESTINATION</b></font> </font>
-            <br> <img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:58&gen=2'><img src='pokemon:79&gen=2'><img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'>
+            <font size=8><b><a href="http://meteorfalls.us/forums/" style="color:$textcolor$">Meteor Falls</a></b></font><br><br>
+            <font size=4 color=$textcolor$><b>THE <font color=$mottocolor$>PREMIER</font> BATTLING DESTINATION</b></font>
+            </font><br>
+            <img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:58&gen=2'><img src='pokemon:79&gen=2'><img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'>
         </td>
-        <td align="right">
+        <td align=right>
             <font face=Gisha size=4><b>
-            <a href="http://meteorfalls.us/" style="color:$textcolor$">Forums</a> <img src="themes/classic/client/aavailable.png">
-            <br> <a href="http://meteorfalls.us/forums/showthread.php?tid=118" style="color:$textcolor$">League</a> <img src="themes/classic/client/aavailable.png">
-            <br> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=7" style="color:$textcolor$">Feedback</a> <img src="themes/classic/client/aavailable.png">
-            <br> <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:$textcolor$">Quote Book</a> <img src="themes/classic/client/aavailable.png">
-            <br> <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:$textcolor$">Join the [VP] clan!</a> <img src="themes/classic/client/aavailable.png">
+            <a href="http://meteorfalls.us/" style="color:$textcolor$">Forum</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.us/forums/showthread.php?tid=118" style="color:$textcolor$">League</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:$textcolor$">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.us/forums/showthread.php?tid=469&action=lastpost" style="color:$textcolor$">Server Changes</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:$mottocolor$">Join the [VP] clan!</a> <img src="themes/classic/client/aavailable.png">
             <br></b></font>
         </td>
     </tr>
