--- a/variants/moonshine.html
+++ b/variants/moonshine.html
@@ -20,7 +20,7 @@
             <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:white">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/showthread.php?tid=469&action=lastpost" style="color:white">Server Changes</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:white">Join the [VP] clan!</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/showthread.php?tid=481" style="color:#E0D89F">Warlight Tournament #1</a> <img src="themes/classic/client/aavailable.png">
+            <a href="http://meteorfalls.us/forums/showthread.php?tid=494" style="color:#E0D89F">Server Mascot Poll</a> <img src="themes/classic/client/aavailable.png">
             <br></b></font>
         </td>
     </tr>
