--- a/announcement.template.html
+++ b/announcement.template.html
@@ -20,7 +20,7 @@
             <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:$textcolor$">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/showthread.php?tid=469&action=lastpost" style="color:$textcolor$">Server Changes</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:$textcolor$">Join the [VP] clan!</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/showthread.php?tid=481" style="color:$mottocolor$">Warlight Tournament #1</a> <img src="themes/classic/client/aavailable.png">
+            <a href="http://meteorfalls.us/forums/showthread.php?tid=494" style="color:$mottocolor$">Server Mascot Poll</a> <img src="themes/classic/client/aavailable.png">
             <br></b></font>
         </td>
     </tr>
