Update announcement links

--- a/announcement.template.html
+++ b/announcement.template.html
@@ -16,11 +16,11 @@
         </td>
         <td align=right>
             <font face=Gisha size=4><b>
+            <a href="http://meteorfalls.us/wiki/index.php/Main_Page" style="color:$textcolor$">Wiki <a href='http://meteorfalls.us/forums/showthread.php?tid=471'  style="color:$textcolor$">[discussion here]</a></a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/" style="color:$textcolor$">Forum</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:$textcolor$">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/showthread.php?tid=469&action=lastpost" style="color:$textcolor$">Server Changes</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:$textcolor$">Join the [VP] clan!</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/showthread.php?tid=494" style="color:$mottocolor$">Server Mascot Poll</a> <img src="themes/classic/client/aavailable.png">
+            <a href="http://meteorfalls.us/forums/showthread.php?tid=502" style="color:$mottocolor$">Mascot Poll!</a> <img src="themes/classic/client/aavailable.png">
             <br></b></font>
         </td>
     </tr>
