--- a/variants/moonshine.html
+++ b/variants/moonshine.html
@@ -16,11 +16,11 @@
         </td>
         <td align=right>
             <font face=Gisha size=4><b>
+            <a href="http://meteorfalls.us/wiki/index.php/Main_Page" style="color:white">Wiki <a href='http://meteorfalls.us/forums/showthread.php?tid=471'  style="color:white">[discussion here]</a></a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/" style="color:white">Forum</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:white">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/showthread.php?tid=469&action=lastpost" style="color:white">Server Changes</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:white">Join the [VP] clan!</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/showthread.php?tid=494" style="color:#E0D89F">Server Mascot Poll</a> <img src="themes/classic/client/aavailable.png">
+            <a href="http://meteorfalls.us/forums/showthread.php?tid=502" style="color:#E0D89F">Mascot Poll!</a> <img src="themes/classic/client/aavailable.png">
             <br></b></font>
         </td>
     </tr>
