--- a/announcement.template.html
+++ b/announcement.template.html
@@ -4,7 +4,7 @@
 <table width=100%>
     <tr>
         <td align=left>
-            <table style="margin-left:28;margin-top:40"><tr><td><img src="pokemon:150&gen=2"></td></tr></table>
+            <table style="margin-left:28;margin-top:20"><tr><td><img src="pokemon:373&gen=4&cropped=true"></td></tr></table>
             <table style='margin: 0 128'><tr><td></td></tr></table>
         </td>
         <td align=center>
@@ -16,11 +16,11 @@
         </td>
         <td align=right>
             <font face=Gisha size=4><b>
-            <a href="http://meteorfalls.us/wiki/index.php/Main_Page" style="color:$textcolor$">Wiki <a href='http://meteorfalls.us/forums/showthread.php?tid=471'  style="color:$textcolor$">[discussion here]</a></a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/" style="color:$textcolor$">Forum</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:$textcolor$">Join [VP]</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:$textcolor$">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:$textcolor$">Join the [VP] clan!</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/showthread.php?tid=502" style="color:$mottocolor$">Mascot Poll!</a> <img src="themes/classic/client/aavailable.png">
+            <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=7" style="color:$mottocolor$">Suggestions</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.us/wiki/index.php/Main_Page" style="color:$mottocolor$">Wiki <a href='http://meteorfalls.us/forums/showthread.php?tid=471'  style="color:$textcolor$">[discussion here]</a></a> <img src="themes/classic/client/aavailable.png">
             <br></b></font>
         </td>
     </tr>
