--- a/announcement.template.html
+++ b/announcement.template.html
@@ -10,7 +10,7 @@
         <td align=center>
             <font face=Gisha>
             <font size=8><b><a href="http://meteorfalls.us/forums/" style="color:$textcolor$">Meteor Falls</a></b></font><br><br>
-            <font size=4 color=$textcolor$><b>THE <font color=$mottocolor$>PREMIER</font> BATTLING DESTINATION</b></font>
+            <font size=4 color=$textcolor$><b>THE <font color=$mottocolor$>PREMIER</font> DESTINATION TO CHILL</b></font>
             </font><br>
             <img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:216&gen=2'><img src='pokemon:79&gen=2'><img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'>
         </td>
