League died; TEO's Warlight game

--- a/announcement.template.html
+++ b/announcement.template.html
@@ -17,7 +17,7 @@
         <td align=right>
             <font face=Gisha size=4><b>
             <a href="http://meteorfalls.us/" style="color:$textcolor$">Forum</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/showthread.php?tid=683" style="color:$mottocolor$">League</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.us/forums/showthread.php?tid=725" style="color:$mottocolor$">B2S Warlight Game</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:$textcolor$">Join [VP]</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:$textcolor$">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=7" style="color:$textcolor$">Suggestions</a> <img src="themes/classic/client/aavailable.png"><br>
