--- a/variants/moonshine.html
+++ b/variants/moonshine.html
@@ -17,7 +17,7 @@
         <td align=right>
             <font face=Gisha size=4><b>
             <a href="http://meteorfalls.us/" style="color:white">Forum</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/showthread.php?tid=683" style="color:#E0D89F">League</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.us/forums/showthread.php?tid=725" style="color:#E0D89F">B2S Warlight Game</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:white">Join [VP]</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:white">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=7" style="color:white">Suggestions</a> <img src="themes/classic/client/aavailable.png"><br>
