--- a/variants/classic.html
+++ b/variants/classic.html
@@ -17,8 +17,7 @@
         <td align=right>
             <font face=Gisha size=4><b>
             <a href="http://meteorfalls.us/" style="color:white">Forum</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/showthread.php?tid=725" style="color:red">B2S Warlight Game</a></a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:white">Join [VP]</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.us/forums/showthread.php?tid=723" style="color:red">Foods & Drinks Game</a> <img src="themes/classic/client/aavailable.png"><br>            <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:white">Join [VP]</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:white">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=7" style="color:white">Suggestions</a> <img src="themes/classic/client/aavailable.png"><br>
             </b></font>
