--- a/variants/ash.html
+++ b/variants/ash.html
@@ -9,7 +9,7 @@
         </td>
         <td align=center>
             <font face=Gisha>
-            <font size=8><b><a href="http://meteorfalls.us/forums/" style="color:white">Meteor Falls</a></b></font><br><br>
+            <font size=8><b><a href="http://meteorfalls.tk/forums/" style="color:white">Meteor Falls</a></b></font><br><br>
             <font size=4 color=white><b>THE <font color=red>PREMIER</font> DESTINATION TO CHILL</b></font>
             </font><br>
             <img src='pokemon:86&gen=2'><img src='pokemon:83&gen=2'><img src='pokemon:54&gen=2'><img src='pokemon:216&gen=2'><img src='pokemon:79&gen=2'><img src='pokemon:81&gen=2'><img src='pokemon:52&gen=2'>
@@ -17,9 +17,9 @@
         <td align=right>
             <font face=Gisha size=4><b>
             <a href="http://meteorfalls.us/" style="color:white">Forum</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/wiki/index.php/Meteor_Falls_FAQ" style="color:red">FAQ</a> <img src="themes/classic/client/aavailable.png"><br>            <a href="http://meteorfalls.us/forums/showthread.php?tid=17" style="color:white">Join [VP]</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=9" style="color:white">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
-            <a href="http://meteorfalls.us/forums/forumdisplay.php?fid=7" style="color:white">Suggestions</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.tk/wiki/index.php/Meteor_Falls_FAQ" style="color:red">FAQ</a> <img src="themes/classic/client/aavailable.png"><br>            <a href="http://meteorfalls.tk/forums/showthread.php?tid=17" style="color:white">Join [VP]</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.tk/forums/forumdisplay.php?fid=9" style="color:white">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.tk/forums/forumdisplay.php?fid=7" style="color:white">Suggestions</a> <img src="themes/classic/client/aavailable.png"><br>
             </b></font>
         </td>
     </tr>
