--- a/variants/moonshine.html
+++ b/variants/moonshine.html
@@ -16,7 +16,7 @@
         </td>
         <td align=right>
             <font face=Gisha size=4><b>
-            <a href="http://meteorfalls.us/" style="color:white">Forum</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.tk/" style="color:white">Forum</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.tk/wiki/index.php/Meteor_Falls_FAQ" style="color:#E0D89F">FAQ</a> <img src="themes/classic/client/aavailable.png"><br>            <a href="http://meteorfalls.tk/forums/showthread.php?tid=17" style="color:white">Join [VP]</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.tk/forums/forumdisplay.php?fid=9" style="color:white">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.tk/forums/forumdisplay.php?fid=7" style="color:white">Suggestions</a> <img src="themes/classic/client/aavailable.png"><br>
