--- a/announcement.template.html
+++ b/announcement.template.html
@@ -16,7 +16,7 @@
         </td>
         <td align=right>
             <font face=Gisha size=4><b>
-            <a href="http://meteorfalls.us/" style="color:$textcolor$">Forum</a> <img src="themes/classic/client/aavailable.png"><br>
+            <a href="http://meteorfalls.tk/" style="color:$textcolor$">Forum</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.tk/wiki/index.php/Meteor_Falls_FAQ" style="color:$mottocolor$">FAQ</a> <img src="themes/classic/client/aavailable.png"><br>            <a href="http://meteorfalls.tk/forums/showthread.php?tid=17" style="color:$textcolor$">Join [VP]</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.tk/forums/forumdisplay.php?fid=9" style="color:$textcolor$">Quote Book</a> <img src="themes/classic/client/aavailable.png"><br>
             <a href="http://meteorfalls.tk/forums/forumdisplay.php?fid=7" style="color:$textcolor$">Suggestions</a> <img src="themes/classic/client/aavailable.png"><br>
